# ebmx-ha

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements.txt
custom_components/ebmx/: __init__.py  binary_sensor.py  cli.py  client.py  config_flow.py  const.py  coordinator.py  entity.py  firmware.py  manifest.json  models.py  protocol.py  sensor.py  strings.json  telemetry.py  update.py
custom_components/ebmx/translations/: en.json
tests/: fixture_firmware_manifest.py  fixtures_frames.py  test_client.py  test_firmware.py  test_ha_entities.py  test_ha_firmware_update.py  test_ha_integration.py  test_protocol.py  test_telemetry.py
